my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WUNUSED_DML12/T_WUNUSED_DML12-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_WUNUSED_DML12_STRUCT_H
#define T_WUNUSED_DML12_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_WUNUSED_DML12(void);


#endif /* not T_WUNUSED_DML12_STRUCT_H */
